dynamic display on index

--- a/cart.html
+++ b/cart.html
@@ -28,7 +28,7 @@
     </style>
 </head>
 <body>
-    <div class="container py-5 px-md-5">
+    <div class="container py-5 px-md-5" id="app">
            <h5> <a href="index.html" style="text-decoration: none" >Home</a> <i class="zmdi zmdi-long-arrow-right"></i> <span class="mb-2 text-dark">Cart <i class="zmdi zmdi-shopping-cart"></i> </span>
         </h5>    <div class="row ">
             <div class="col-sm-5 col-md-4 mt-5">
@@ -51,7 +51,7 @@
                     <div class="card-body d-flex justify-content-between ">
                         <div>
                             <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                            <span class="card-text">Subject</span><br>
+                            <span class="card-text">{{products[0].price}}</span><br>
                             <span class="card-text">Subject</span><br>
                             <span class="card-text">Subject</span><br>
                             <span class="card-text">Subject</span>
