--- a/index.html
+++ b/index.html
@@ -11,30 +11,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600" rel="stylesheet">
     <!-- icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
+    <!-- style -->
+    <link rel="stylesheet" href="css/style.css">
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
         crossorigin="anonymous">
     <!-- vue -->
     <script src="https://unpkg.com/vue@2.7.8/dist/vue.js"></script>
     <title>Index</title>
-
-    <style>
-        * {
-            font-family: 'Inter', sans-serif;
-        }
-
-        .card-width {
-            width: 20rem;
-        }
-
-        .fs-14{
-            font-size: 14px;
-        }
-
-        .mt-70{
-            margin-top: 70px;
-        }
-    </style>
 </head>
 
 <body>
@@ -51,7 +35,7 @@
                             <span class="card-text fs-14">Price: <b class="card-subtitle mb-2 fs-14">{{product.price}}</b></span><br>
                             <span class="card-text fs-14">Spaces: <b class="card-subtitle mb-2 fs-14">{{product.spaces}}</b></span><br>
 
-                            <btn @click="addToCart(product.id)" class="card-link btn btn-dark btn-sm mt-70 px-2"> <i class="zmdi zmdi-plus mx-1"></i> Add to cart </btn>
+                            <button @click="addToCart(product.id)" class="card-link btn btn-dark btn-sm mt-70 px-2"> <i class="zmdi zmdi-plus mx-1"></i> Add to cart </button>
                         </div>
                         <img v-bind:src="product.imageURL" v-bind:alt="product.altText" class="img-fluid border rounded" style="height: 200px; width: 120px; object-fit: cover">
                     </div>
