--- a/cart.html
+++ b/cart.html
@@ -29,14 +29,14 @@
                 <div class="card card-width rounded-0 shadow-sm">
                     <div class="card-body d-flex justify-content-between ">
                         <div>
-                            <span class="card-text fs-14">Subject: <b class="card-subtitle mb-2 fs-14">{{item.product.subject}}</b></span><br>
-                            <span class="card-text fs-14">Location: <b class="card-subtitle mb-2 fs-14">{{item.product.location}}</b></span><br>
-                            <span class="card-text fs-14">Price: <b class="card-subtitle mb-2 fs-14">{{item.product.price}}</b></span><br>
+                            <span class="card-text fs-14">Subject: <b class="card-subtitle mb-2 fs-14">{{item.lesson.subject}}</b></span><br>
+                            <span class="card-text fs-14">Location: <b class="card-subtitle mb-2 fs-14">{{item.lesson.location}}</b></span><br>
+                            <span class="card-text fs-14">Price: <b class="card-subtitle mb-2 fs-14">{{item.lesson.price}}</b></span><br>
                             <span class="card-text fs-14">Spaces: <b class="card-subtitle mb-2 fs-14">{{item.spaces}}</b></span><br>
 
-                            <button @click="removeFromCart(item.productId)" class="card-link btn btn-dark btn-sm mt-70 px-3"> <i class="zmdi zmdi-minus mx-1"></i> Remove </button>
+                            <button @click="removeFromCart(item.lessonId)" class="card-link btn btn-dark btn-sm mt-70 px-3"> <i class="zmdi zmdi-minus mx-1"></i> Remove </button>
                         </div>
-                        <img v-bind:src="item.product.imageURL" v-bind:alt="item.product.altText" class="img-fluid border rounded" style="height: 200px; width: 120px; object-fit: cover">
+                        <img v-bind:src="item.lesson.imageURL" v-bind:alt="item.lesson.altText" class="img-fluid border rounded" style="height: 200px; width: 120px; object-fit: cover">
                     </div>
 
                 </div>
@@ -52,6 +52,7 @@
     </div>
 
     <!-- scripts -->
+    <script src="js/lessons.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
