--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
         <p class="text-center">Home</p>
         <hr>
         <div class="row">
-            <div class="col-sm-5 col-md-4 mt-4" v-for="product in products">
+            <div class="col-sm-5 col-md-4 mt-4" v-for="lesson in lessons">
                 <div class="card card-width rounded-0 shadow-sm">
                     <div class="card-body d-flex justify-content-between ">
                         <div>
-                            <span class="card-text fs-14">Subject: <b class="card-subtitle mb-2 fs-14">{{product.subject}}</b></span><br>
-                            <span class="card-text fs-14">Location: <b class="card-subtitle mb-2 fs-14">{{product.location}}</b></span><br>
-                            <span class="card-text fs-14">Price: <b class="card-subtitle mb-2 fs-14">{{product.price}}</b></span><br>
-                            <span class="card-text fs-14">Spaces: <b class="card-subtitle mb-2 fs-14">{{product.spaces}}</b></span><br>
+                            <span class="card-text fs-14">Subject: <b class="card-subtitle mb-2 fs-14">{{lesson.subject}}</b></span><br>
+                            <span class="card-text fs-14">Location: <b class="card-subtitle mb-2 fs-14">{{lesson.location}}</b></span><br>
+                            <span class="card-text fs-14">Price: <b class="card-subtitle mb-2 fs-14">{{lesson.price}}</b></span><br>
+                            <span class="card-text fs-14">Spaces: <b class="card-subtitle mb-2 fs-14">{{lesson.spaces}}</b></span><br>
 
-                            <button @click="addToCart(product.id)" class="card-link btn btn-dark btn-sm mt-70 px-2"> <i class="zmdi zmdi-plus mx-1"></i> Add to cart </button>
+                            <button v-bind:class="{disabled: lesson.spaces <= 0}" @click="addToCart(lesson.id)" class="card-link btn btn-dark btn-sm mt-70 px-2"> <i class="zmdi zmdi-plus mx-1"></i> Add to cart </button>
                         </div>
-                        <img v-bind:src="product.imageURL" v-bind:alt="product.altText" class="img-fluid border rounded" style="height: 200px; width: 120px; object-fit: cover">
+                        <img v-bind:src="lesson.imageURL" v-bind:alt="lesson.altText" class="img-fluid border rounded" style="height: 200px; width: 120px; object-fit: cover">
                     </div>
 
                 </div>
@@ -46,13 +46,14 @@
         </div>
         <div class="row mt-5 text-center">
             <div class="col-12 ">
-                <a href="cart.html" class="card-link btn btn-dark btn-sm px-3"><i class="zmdi zmdi-long-arrow-right mx-2"></i>Go
+                <a href="cart.html" v-bind:disabled="{disabled: disableCartButton}" v-bind:class="{disabled: disableCartButton}" class="card-link btn btn-dark btn-sm px-3"><i class="zmdi zmdi-long-arrow-right mx-2"></i>Go
                     to cart</a>
             </div>
         </div>
     </div>
 
     <!-- scripts -->
+    <script src="js/lessons.js"></script>
     <script src="js/app.js"></script>
 </body>
 
