--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
         <div v-if="onHomePage">
             <p class="text-center">Home</p>
             <hr>
+            <div class="row justify-content-center pt-3">
+                <div class="col-md-6">
+                    <input type="text" class="form-control" placeholder="Search.." v-model="search">
+                  </div>
+            </div>
             <!-- main -->
-            <div class="row pt-4">
+            <div class="row pt-2">
                 <!-- sort section -->
                 <div class="col-md-3 col-lg-2 card rounded-0 pt-4 mt-2 fs-14">
 
@@ -74,7 +79,7 @@
                 <!-- lessons -->
                 <div class="col-md-9 col-lg-10">
                     <div class="row ">
-                        <div class="col-sm-6 col-md-6 col-lg-4 mt-2" v-for="lesson in lessons">
+                        <div class="col-sm-6 col-md-6 col-lg-4 mt-2" v-for="lesson in filteredLessonList">
                             <div class="card card-width rounded-0 shadow-sm">
                                 <div class="card-body d-flex justify-content-between ">
 
